# serial-communication

./: .gitignore  CMakeLists.txt  CommunicatorDialog.cpp  CommunicatorDialog.h  main.cpp
config/: commands.txt
lib/: libmodbus.la
shell/: release.sh
